refactor: simplify and restructure markAsRead and related internal methods
added toDTO method in NotificationMapper to map NotificationWithReadStatus to dto